# 2D_graph_viewer

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.py  conanfile.txt  init_and_build.ps1  init_conan.ps1
src/: main.cpp
src/common/: CMakeLists.txt
src/model/: CMakeLists.txt
src/model/include/model/: IGraph.hpp  IGraphElement.hpp  IPainter.hpp
src/model/source/: Graph.cpp
src/model/source/GraphElements/: Function.cpp  GraphElementBase.hpp
src/view/: CMakeLists.txt
src/view/include/view/: GraphWidget.h
src/view/source/: GraphWidget.cpp
src/viewmodel/: CMakeLists.txt
src/viewmodel/include/viewmodel/: GraphConnector.hpp  GraphPainter.hpp
src/viewmodel/source/: GraphConnector.cpp  GraphPainter.cpp
